Bug 124150 - Dialog theming/UX - color selection broken
Summary: Dialog theming/UX - color selection broken
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: iOS Editor (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: Other iOS
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2019-03-18 12:40 UTC by Nicolas Christener
Modified: 2019-05-21 08:38 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Printscreen showing the color widget on iOS (425.07 KB, image/png)
2019-03-18 12:42 UTC, Nicolas Christener
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Christener 2019-03-18 12:40:26 UTC
Description:
Some "tunneled dialogs" options involve a color selection widget.

There are multiple issues with this widget:
* color palets can't be changet (probably because of #124146
* the buttons to chose a color are too small to be used with a finger
* the "custom color" dialog doesn't show up

Steps to Reproduce:
Steps to Reproduce:
1. Create a writer document in the iOS app
2. Create some text, select it and click "Edit > Edit paragraphe style" in the menu (Bearbeiten > Absatzvoralge bearbeiten... in German)
3. Chose for example "Borders" tab and open the color dialog

Actual Results:
It's very hard to use this dialog with a finger.

Expected Results:
It should be possible to chose the color(s) with a finger.


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 Nicolas Christener 2019-03-18 12:42:18 UTC
Created attachment 150052 [details]
Printscreen showing the color widget on iOS
Comment 2 Commit Notification 2019-04-01 06:03:26 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/c2108dd683ec7ff0bcaac8456c6cce9610a2993a%5E%21

tdf#124150 increase size of color valueset widget

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Xisco Faulí 2019-05-02 09:51:05 UTC
A polite ping to Tomaž Vajngerl:
Is this bug fixed? if so, could you please close it as RESOLVED FIXED ? Otherwise, Could you please explain what's missing?
Thanks
Comment 4 Nicolas Christener 2019-05-21 08:30:26 UTC
In my opinion this bug is fixed and can be closed.

I'll add specific bugs for the remaining issues.
Comment 5 Xisco Faulí 2019-05-21 08:38:08 UTC
(In reply to Nicolas Christener from comment #4)
> In my opinion this bug is fixed and can be closed.
> 
> I'll add specific bugs for the remaining issues.

Ok, let's close it as RESOLVED FIXED then