tdf#124150 increase size of color valueset widget

Size of the color value set can be set through settings, but there
was no setter. Added a setter and set it to a bigger value so it
is better suited for touch.

Change-Id: I8c9b17f7379c4702b0faf7847f1e6292cd89b0d0
Reviewed-on: https://gerrit.libreoffice.org/70031
Tested-by: Jenkins
Reviewed-by: Tomaž Vajngerl <quikee@gmail.com>
(cherry picked from commit c2108dd683ec7ff0bcaac8456c6cce9610a2993a)